# vertex-welding

./: .clang-format  CMakeLists.txt  LICENSE  README.md
opengl/: CMakeLists.txt  utils.cpp  utils.h
vertex-welding/: CMakeLists.txt  camera.cpp  camera.h  main.cpp  scene.cpp  scene.h  vertex.h  vertex_welder.cpp  vertex_welder.h
vertex-welding/shaders/: fragment.glsl  vertex.glsl
